samples/_failures_safe/1761481349_e12057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f3138da.c: In function ‘main’:
./samples/SAFE/__tmp_5f3138da.c:129:9: error: expected expression at end of input
  129 |         if (sscanf(line, "%31s %15s %255[^\n]", timestamp,
      |         ^~
./samples/SAFE/__tmp_5f3138da.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f3138da.c:129:9: error: expected declaration or statement at end of input
